feat: enhance IngestionMessageListener for improved message handling and connection management